added gitignore & java stuff